--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply h-screen;
+@layer base {
+  body {
+    @apply h-screen;
+  }
+  * {
+    @apply select-none
+  }
 }
